# vecvec

./: .dockerignore  .envrc  .gitignore  BuildPlan.md  Cargo.toml  Dockerfile  README.md  deny.toml  flake.nix  rust-toolchain.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: mqls2g2bz7gn3nrhlfn7lv6jbl0qjmff-source  qa71zg2wb8qpsl6sgg8x3jhzddymsqg9-source
.github/workflows/: ci.yml  docker.yml
crates/vecvec-cli/: Cargo.toml
crates/vecvec-cli/src/: main.rs
crates/vecvec-client/: Cargo.toml
crates/vecvec-client/src/: lib.rs
crates/vecvec-core/: Cargo.toml
crates/vecvec-core/benches/: distance.rs  hnsw.rs  search.rs
crates/vecvec-core/examples/: sift1m.rs  sift_build.rs
crates/vecvec-core/src/: collection.rs  durable.rs  error.rs  id.rs  lib.rs  ordered.rs  payload.rs  query.rs  vector.rs
crates/vecvec-core/src/distance/: aarch64.rs  dispatch.rs  mod.rs  scalar.rs  simsimd_oracle.rs  x86.rs
crates/vecvec-core/src/index/: deleted.rs  filter.rs  flat.rs  mod.rs
crates/vecvec-core/src/index/hnsw/: builder.rs  graph.rs  heuristic.rs  mod.rs  parallel.rs  rng.rs  search.rs  visited.rs
crates/vecvec-core/src/persist/: atomic.rs  mod.rs  wal.rs
crates/vecvec-core/src/quantization/: mod.rs
crates/vecvec-core/src/segment/: appendable.rs  codec.rs  id_map.rs  mod.rs  sealed.rs  search.rs  set.rs  store.rs
crates/vecvec-core/src/version/: deletion.rs  manifest.rs  mod.rs  policy.rs  store.rs
crates/vecvec-proto/: Cargo.toml  build.rs
crates/vecvec-proto/proto/: vecvec.proto
crates/vecvec-proto/src/: lib.rs
crates/vecvec-server/: Cargo.toml
crates/vecvec-server/src/: blocking.rs  grpc.rs  lib.rs  main.rs  registry.rs  rest.rs  service.rs
crates/vecvec-server/tests/: grpc_vertical_slice.rs  rest_api.rs
demos/semantic-search/: README.md  config.json  corpus.json  lib.mjs  package.json  query.mjs  seed.mjs
deploy/: Caddyfile  entrypoint.sh
sdk/go/: Makefile  README.md  client.go  client_test.go  go.mod
sdk/go/example/: main.go
sdk/go/proto/vecvec/v1/: vecvec.proto
vvui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
vvui/scripts/: seed.mjs
vvui/src/: App.tsx  api.ts  store.ts  styles.css  types.ts
vvui/src/components/: BrowsePanel.tsx  GraphScope.tsx  InsertPanel.tsx  InspectPanel.tsx  Modal.tsx  SearchPanel.tsx  SidePanel.tsx  Sidebar.tsx  Timeline.tsx  Toasts.tsx  TopBar.tsx
vvui/src/lib/: format.ts  pca.ts  projection.ts
