# vecvec — workspace root.
# See BuildPlan.md for the architecture and milestone roadmap.
[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# --- internal crates ---
vecvec-core = { path = "crates/vecvec-core" }
vecvec-proto = { path = "crates/vecvec-proto" }
vecvec-client = { path = "crates/vecvec-client" }

# --- external (grown per milestone; M0 keeps this minimal) ---
thiserror = "2"
crc32fast = "1.4"
roaring = "0.10"
arc-swap = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
memmap2 = "0.9"
tar = "0.4"
clap = { version = "4", features = ["derive"] }

# --- server / gRPC stack (M3+) ---
tonic = "0.14"
tonic-prost = "0.14"
tonic-health = "0.14"
tonic-reflection = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time"] }
tokio-stream = "0.1"
axum = "0.8"
tower = "0.5"
dashmap = "6"
rayon = "1"

# --- dev/test ---
tempfile = "3"
proptest = "1"
# default-features off drops the html-report (plotters/rayon) deps; we only need
# the cargo-bench harness for text output.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

# Keep release builds fast and debuggable for a perf-sensitive DB.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"

# A profile for benchmarks/perf work that keeps full debuginfo.
[profile.bench]
debug = true
