[package]
name = "vecvec-cli"
description = "Admin and client CLI for the vecvec vector database."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "vecvec"
path = "src/main.rs"

[dependencies]
vecvec-core.workspace = true
vecvec-proto.workspace = true
clap.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
serde_json.workspace = true
