[package]
name = "vecvec-core"
description = "Pure, runtime-agnostic core engine for the vecvec vector database."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
crc32fast.workspace = true
tempfile.workspace = true

[dev-dependencies]
proptest.workspace = true
