[package]
name = "vecvec-core"
description = "Pure, runtime-agnostic core engine for the vecvec vector database."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# Pulls in `simsimd` as an independent reference for cross-checking the distance
# kernels in tests. Off by default; enable with `--features oracle`.
oracle = ["dep:simsimd"]

[dependencies]
thiserror.workspace = true
crc32fast.workspace = true
tempfile.workspace = true
roaring.workspace = true
arc-swap.workspace = true
parking_lot.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
memmap2.workspace = true
tar.workspace = true
simsimd = { version = "6", optional = true }

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "distance"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "hnsw"
harness = false
